--- a/src/app/login/login.page.html
+++ b/src/app/login/login.page.html
@@ -12,6 +12,7 @@
                   <ion-item>
                     <ion-input
                       class="custom"
+                      (keyup.enter)="login()"
                       placeholder="Ingresa un token"
                       formControlName="token"
                     >
