--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,20 +1,46 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
-    <ion-title>
-      Blank
-    </ion-title>
+    <ion-title> Hotel App </ion-title>
+    <ion-button
+      class="cerrarSesion"
+      (click)="cerrarSesion()"
+      slot="end"
+      color="danger"
+    >
+      <ion-icon name="exit"></ion-icon>
+    </ion-button>
   </ion-toolbar>
 </ion-header>
 
 <ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">Blank</ion-title>
-    </ion-toolbar>
-  </ion-header>
-
-  <div id="container">
-    <strong>Ready to create an app?</strong>
-    <p>Start with Ionic <a target="_blank" rel="noopener noreferrer" href="https://ionicframework.com/docs/components">UI Components</a></p>
-  </div>
+  <ion-row>
+    <ion-col>
+      <ion-list>
+        <ion-item-sliding *ngFor="let huesped of huespedes; let i=index">
+          <ion-item>
+            <ion-label>{{huesped.nombre}}</ion-label>
+            <ion-button
+              (click)="verHuesped(huesped.token)"
+              slot="end"
+              size="default"
+              color="primary"
+            >
+              <ion-icon name="search"></ion-icon>
+            </ion-button>
+          </ion-item>
+          <ion-item-options side="end" (ionSwipe)="borrarHuesped(i)">
+            <ion-item-option expandable color="danger">
+              <ion-icon name="trash-outline"></ion-icon>
+            </ion-item-option>
+          </ion-item-options>
+        </ion-item-sliding>
+      </ion-list>
+    </ion-col>
+  </ion-row>
+  <ion-fab class="fab" horizontal="end">
+    <ion-title>Nuevo Huésped</ion-title>
+    <ion-fab-button color="primary" (click)="nuevoHuesped()">
+      <ion-icon name="create"></ion-icon>
+    </ion-fab-button>
+  </ion-fab>
 </ion-content>
