--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -1,3 +1,7 @@
+.cerrarSesion {
+  margin-right: 10px;
+}
+
 #container {
   text-align: center;
 
@@ -24,4 +28,10 @@
 
 #container a {
   text-decoration: none;
+}
+
+.fab {
+  margin-top: 15px;
+  margin-right: 15px;
+  display: flex;
 }
