cambios al momento (aun falta lo del boton de whatsa)

--- a/src/app/nuevo-huesped/nuevo-huesped.page.html
+++ b/src/app/nuevo-huesped/nuevo-huesped.page.html
@@ -114,4 +114,8 @@
     <ion-icon slot="start" name="save"></ion-icon>
     Guardar
   </ion-button>
+  <ion-button (click)="prueba()" class="btn" size="large">
+    <ion-icon slot="start" name="save"></ion-icon>
+    Probar
+  </ion-button>
 </ion-content>
