--- a/src/app/ver-huesped/ver-huesped.page.html
+++ b/src/app/ver-huesped/ver-huesped.page.html
@@ -12,11 +12,15 @@
       <ion-card-subtitle>
         <h2>Nombre: {{huesped.nombre}}</h2>
         <h2>Teléfono: {{huesped.telefono}}</h2>
-        <h2>Fecha de ingreso: {{huesped.fecha_ingreso}}</h2>
-        <h2>Fecha de salida: {{huesped.fecha_salida}}</h2>
+        <h2>Fecha de ingreso: {{formatFecha(huesped.fecha_ingreso)}}</h2>
+        <h2>Fecha de salida: {{formatFecha(huesped.fecha_salida)}}</h2>
         <h3>Token: {{huesped.token}}</h3>
         <h3>Habitación: {{huesped.habitacion}}</h3>
       </ion-card-subtitle>
     </ion-card-header>
   </ion-card>
+
+  <ion-button color="success" href={{url}}>
+    <ion-icon name="logo-whatsapp"></ion-icon>
+  </ion-button>
 </ion-content>
