--- a/src/app/pages/checkin/checkin.page.html
+++ b/src/app/pages/checkin/checkin.page.html
@@ -1,6 +1,6 @@
 <ion-header>
   <ion-toolbar>
-    <ion-title>checkin</ion-title>
+    <ion-title>{{allowed}}</ion-title>
   </ion-toolbar>
 </ion-header>
 
