--- a/src/app/pages/checkin/checkin.page.html
+++ b/src/app/pages/checkin/checkin.page.html
@@ -1,9 +1,24 @@
-<ion-header>
-  <ion-toolbar>
-    <ion-title>{{allowed}}</ion-title>
-  </ion-toolbar>
-</ion-header>
-
 <ion-content>
-
+  <div class="container" *ngIf="allowed">
+    <ion-card>
+      <img alt="Oops" src="../../../assets/pics/oops.gif" />
+      <ion-card-header>
+        <ion-card-title>{{"WELCOME" | translate}} {{huesped.nombre}}</ion-card-title>
+      </ion-card-header>
+      <ion-card-content>
+        <h2>La clave de acceso para la caja fuerte de su habitación es {{checkin}}.</h2>
+      </ion-card-content>
+    </ion-card>
+  </div>
+  <div class="container" *ngIf="!allowed">
+    <ion-card class="container">
+      <img alt="Welcome" src="../../../assets/pics/oops.gif" />
+      <ion-card-header>
+        <ion-card-title>{{"SORRY" | translate}} {{huesped.nombre}}</ion-card-title>
+      </ion-card-header>
+      <ion-card-content>
+        <h2>{{"INFO" | translate}} {{checkin}}.</h2>
+      </ion-card-content>
+    </ion-card>
+  </div>
 </ion-content>
