--- a/src/app/nuevo-huesped/nuevo-huesped.page.html
+++ b/src/app/nuevo-huesped/nuevo-huesped.page.html
@@ -138,7 +138,8 @@
             <ion-datetime
               (ionChange)="fechaSeleccionadaIngreso($event)"
               presentation="date"
-              [min]="diaActual"
+              [min]="diaSiguiente"
+              [value]="diaSiguiente"
             >
               <span slot="title">Selecciona la fecha de ingreso</span>
             </ion-datetime>
@@ -147,6 +148,7 @@
               (ionChange)="fechaSeleccionadaSalida($event)"
               presentation="date"
               [min]="fechaIngreso"
+              [value]="diaSiguiente"
             >
               <span slot="title">Selecciona la fecha de Salida</span>
             </ion-datetime>
