Camera plugin & firebase updated
Dependencies:
npm i @capacitor/camera

--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -35,7 +35,7 @@
               <ion-icon name="search"></ion-icon>
             </ion-button>
           </ion-item>
-          <ion-item-options side="end" (ionSwipe)="borrarHuesped(huesped.id)">
+          <ion-item-options side="end" (ionSwipe)="borrarHuesped(huesped)">
             <ion-item-option expandable color="danger">
               <ion-icon name="trash-outline"></ion-icon>
             </ion-item-option>
