--- a/src/app/nuevo-huesped/nuevo-huesped.page.html
+++ b/src/app/nuevo-huesped/nuevo-huesped.page.html
@@ -1,6 +1,6 @@
 <ion-header>
   <ion-toolbar>
-    <ion-title>Agregar nuevo huésped</ion-title>
+    <ion-title>Nuevo huésped</ion-title>
     <ion-tab-button slot="start">
       <ion-back-button></ion-back-button>
     </ion-tab-button>
@@ -9,6 +9,15 @@
 
 <ion-content>
   <ion-grid>
+    <!--Photo-->
+    <ion-row>
+      <ion-col>
+        <ion-img [src]="photoService.photoURL"></ion-img>
+        <ion-button (click)="addPicture()">
+          <ion-icon name ="camera"></ion-icon>
+        </ion-button>
+      </ion-col>
+    </ion-row>
     <form [formGroup]="myForm">
       <!-- Nombre -->
       <ion-row>
@@ -132,28 +141,33 @@
       </ion-row>
       <!-- Calendarios -->
       <ion-row>
-        <!-- Fecha de ingreso -->
-        <ion-col align-items-center>
-          <div class="calendar-div">
-            <ion-datetime
-              (ionChange)="fechaSeleccionadaIngreso($event)"
-              presentation="date"
-              [min]="diaSiguiente"
-              [value]="diaSiguiente"
-            >
-              <span slot="title">Selecciona la fecha de ingreso</span>
-            </ion-datetime>
-            <!-- Fecha de salida -->
-            <ion-datetime
-              (ionChange)="fechaSeleccionadaSalida($event)"
-              presentation="date"
-              [min]="fechaIngreso"
-              [value]="diaSiguiente"
-            >
-              <span slot="title">Selecciona la fecha de Salida</span>
-            </ion-datetime>
+        <div class="calendar-div">
+          <ion-grid>
+            <ion-row>
+              <ion-col>
+                <ion-datetime
+                (ionChange)="fechaSeleccionadaIngreso($event)"
+                presentation="date"
+                [min]="diaSiguiente"
+                [value]="diaSiguiente"
+              >
+                <span slot="title">Selecciona la fecha de ingreso</span>
+              </ion-datetime>
+              </ion-col>
+  
+              <ion-col>
+                <ion-datetime
+                  (ionChange)="fechaSeleccionadaSalida($event)"
+                  presentation="date"
+                  [min]="fechaIngreso"
+                  [value]="diaSiguiente"
+                >
+                  <span slot="title">Selecciona la fecha de Salida</span>
+                </ion-datetime>
+              </ion-col>
+            </ion-row>
+          </ion-grid>
           </div>
-        </ion-col>
       </ion-row>
     </form>
   </ion-grid>
