--- a/src/app/ver-huesped/ver-huesped.page.html
+++ b/src/app/ver-huesped/ver-huesped.page.html
@@ -12,6 +12,9 @@
 </ion-header>
 <ion-content>
   <ion-card>
+    <div class="flex">
+      <img [src]="huesped.photo">
+    </div>
     <ion-card-header>
       <ion-card-subtitle>
         <h2>Nombre: {{huesped.nombre}}</h2>
