--- a/src/app/ver-huesped/ver-huesped.page.scss
+++ b/src/app/ver-huesped/ver-huesped.page.scss
@@ -1,3 +1,23 @@
 .margin{
     margin-right: 10px;
 }
+
+.flex{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+img{
+  width: 35vh;
+  height: 35vh;
+  border-radius: 100%;
+  object-fit: cover;
+  align-self: center;
+}
+
+ion-card{
+  -webkit-user-select: text;
+  -moz-user-select: text;
+  -ms-user-select: text;
+  user-select: text;
+}
